<?xml version="1.0" encoding="UTF-8"?>

<resources>

    <string name="app_name">伝助へスケジュール調整登録</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="tv_create">イベント新規作成</string>

    <string name="tv_eventname">イベント名</string>

    <string name="tv_explain">イベント説明文</string>

    <string name="tv_schedule">候補日程</string>

    <string name="tv_month">月</string>

    <string name="tv_day">日</string>

    <string name="tv_password">パスワード</string>

    <string name="tv_email">メールアドレス</string>

    <string name="bt_send">送信</string>


    <string-array name="month">

    <item>1</item>

    <item>2</item>

    <item>3</item>

    <item>4</item>

        <item>5</item>

        <item>6</item>

        <item>7</item>

        <item>8</item>

        <item>9</item>

        <item>10</item>

        <item>11</item>

        <item>12</item>

</string-array>


    <string-array name="day">

    <item>1</item>

    <item>2</item>

    <item>3</item>

    <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
</string-array>

</resources>