<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_create"
        android:textSize="24.0sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_eventname" />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_schedule" />
        <Spinner
            android:id="@+id/sp_month"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:entries="@array/month" />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_month" />
        <Spinner
            android:id="@+id/sp_day"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:entries="@array/day" />
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_day" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_explain" />
        <EditText
            android:id="@+id/et_content"
            android:layout_width="250dp"

            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_password" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"

            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_email" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"

            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>



    <Button
        android:id="@+id/bt_send"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_send" />

</LinearLayout>
